# whiteboard

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
boards/: apps.py  consumers.py  routing.py  views.py
boards/static/css/: main.css
boards/static/js/: boards.js
boards/templates/: board.html  index.html
whiteboard/: asgi.py  settings.py  urls.py  wsgi.py
